src/objects/User__c.object
<CustomObject>
    <fields>
        <fullName>DNI__c</fullName>
        <label>DNI</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <label>User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DNI__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Password__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>